--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "dependencies": {
     "@discordjs/voice": "^0.8.0",
     "boot-client": "github:Littie6amer/Boot-Client",
+    "discord-modals": "^1.3.5",
     "discord.js": "^13.6.0",
     "dotenv": "^16.0.0"
   }
