--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
-  "start": "/build/index.js",
+  "start": "./build/index.js",
+  "main": "./build/index.js",
   "scripts": {
     "start": "node ./build/index.js",
     "build": "tsc",
@@ -11,5 +12,19 @@
     "discord-modals": "^1.3.5",
     "discord.js": "^13.6.0",
     "dotenv": "^16.0.0"
-  }
+  },
+  "name": "cosmo",
+  "version": "1.0.0",
+  "devDependencies": {},
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Littie6amer/Cosmo.git"
+  },
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/Littie6amer/Cosmo/issues"
+  },
+  "homepage": "https://github.com/Littie6amer/Cosmo#readme",
+  "description": ""
 }
